NAT-301: add single member v0 endpoint
